--- a/package.json
+++ b/package.json
@@ -1,50 +1,50 @@
 {
-  "name": "ownify",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@ant-design/icons": "^5.5.2",
-    "@coral-xyz/anchor": "^0.30.1",
-    "@metaplex-foundation/mpl-token-metadata": "^3.3.0",
-    "@metaplex-foundation/umi": "^0.9.2",
-    "@metaplex-foundation/umi-bundle-defaults": "^0.9.2",
-    "@radix-ui/react-accordion": "^1.2.1",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.1.4",
-    "@solana/wallet-adapter-base": "^0.9.23",
-    "@solana/wallet-adapter-react": "^0.15.35",
-    "@solana/wallet-adapter-react-ui": "^0.9.35",
-    "@solana/wallet-adapter-wallets": "^0.19.32",
-    "@solana/web3.js": "^1.95.5",
-    "antd": "^5.22.2",
-    "axios": "^1.7.8",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.462.0",
-    "next": "^15.0.3",
-    "next-auth": "^5.0.0-beta.25",
-    "next-themes": "^0.4.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-share": "^5.1.1",
-    "sonner": "^1.7.0",
-    "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "^15.0.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+	"name": "twiftify",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@ant-design/icons": "^5.5.2",
+		"@coral-xyz/anchor": "^0.30.1",
+		"@metaplex-foundation/mpl-token-metadata": "^3.3.0",
+		"@metaplex-foundation/umi": "^0.9.2",
+		"@metaplex-foundation/umi-bundle-defaults": "^0.9.2",
+		"@radix-ui/react-accordion": "^1.2.1",
+		"@radix-ui/react-slot": "^1.1.0",
+		"@radix-ui/react-tooltip": "^1.1.4",
+		"@solana/wallet-adapter-base": "^0.9.23",
+		"@solana/wallet-adapter-react": "^0.15.35",
+		"@solana/wallet-adapter-react-ui": "^0.9.35",
+		"@solana/wallet-adapter-wallets": "^0.19.32",
+		"@solana/web3.js": "^1.95.5",
+		"antd": "^5.22.2",
+		"axios": "^1.7.8",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"lucide-react": "^0.462.0",
+		"next": "^15.0.3",
+		"next-auth": "^5.0.0-beta.25",
+		"next-themes": "^0.4.3",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-share": "^5.1.1",
+		"sonner": "^1.7.0",
+		"tailwind-merge": "^2.5.5",
+		"tailwindcss-animate": "^1.0.7"
+	},
+	"devDependencies": {
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"eslint": "^8",
+		"eslint-config-next": "^15.0.3",
+		"postcss": "^8",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5"
+	}
 }
